test/arrays/bradc/localSlices/nonlocalslice.comm-none.good
nonlocalslice.chpl:3: error: halt reached - array index out of bounds
note: index was 1 but array bounds are 0..0
